--- a/package.json
+++ b/package.json
@@ -19,12 +19,22 @@
   "homepage": "https://github.com/lkurzyniec/tsexpress-tutorial#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
+    "envalid": "^5.0.0",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
+    "mongoose": "^5.7.5",
     "reflect-metadata": "^0.1.13",
     "typescript": "^3.6.3"
   },
   "devDependencies": {
+    "@types/node": "^12.11.1",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "ts-node-dev": "^1.0.0-pre.43"
   }
 }
