--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@types/mongoose": "^5.5.21",
     "@types/node": "^12.11.1",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
