--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tsexpress-tutorial",
-  "version": "1.0.0",
-  "description": "Source code based on [TypeScript Express tutorial](https://wanago.io/courses/typescript-express-tutorial/).",
+  "name": "tsexpress",
+  "version": "0.0.2",
+  "description": "Simple API in nodeJS with TypeScript and express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lkurzyniec/tsexpress-tutorial.git"
+    "url": "git+https://github.com/lkurzyniec/tsexpress.git"
   },
   "author": "Łukasz Kurzyniec",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/lkurzyniec/tsexpress-tutorial/issues"
+    "url": "https://github.com/lkurzyniec/tsexpress/issues"
   },
-  "homepage": "https://github.com/lkurzyniec/tsexpress-tutorial#readme",
+  "homepage": "https://github.com/lkurzyniec/tsexpress",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
@@ -31,12 +31,6 @@
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.21",
     "@types/node": "^12.11.1",
-    "eslint": "^6.5.1",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "ts-node-dev": "^1.0.0-pre.43"
   }
 }
