--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "inversify": "^5.0.1",
     "mongoose": "^5.7.5",
+    "mongoose-autopopulate": "^0.9.1",
     "reflect-metadata": "^0.1.13",
     "typescript": "^3.6.3"
   },
