--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/lkurzyniec/tsexpress",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.2",
     "dotenv": "^8.1.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "inversify": "^5.0.1",
     "mongoose": "^5.7.5",
     "mongoose-autopopulate": "^0.9.1",
