--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/lkurzyniec/tsexpress",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
@@ -35,6 +36,7 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.21",
     "@types/node": "^12.11.1",
