--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "envalid": "^5.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "helmet": "^3.21.2",
     "inversify": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "mongoose-autopopulate": "^0.9.1",
     "reflect-metadata": "^0.1.13",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.21",
     "@types/node": "^12.11.1",
     "ts-node-dev": "^1.0.0-pre.43"
