--- a/package.json
+++ b/package.json
@@ -19,19 +19,21 @@
   "homepage": "https://github.com/lkurzyniec/tsexpress",
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "helmet": "^3.21.2",
     "inversify": "^5.0.1",
+    "json-ignore": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "mongoose-autopopulate": "^0.9.1",
     "reflect-metadata": "^0.1.13",
+    "statuses": "^1.5.0",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.2",
     "txtgen": "^2.2.4",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.21",
