--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
