--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --no-notify --clear --debounce 1000 ./src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lkurzyniec/tsexpress.git"
-  },
-  "jest": {
-    "testEnvironment": "node"
   },
   "author": "Łukasz Kurzyniec",
   "license": "ISC",
@@ -21,6 +19,7 @@
   },
   "homepage": "https://github.com/lkurzyniec/tsexpress",
   "dependencies": {
+    "@types/jest": "^24.0.23",
     "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
@@ -47,7 +46,6 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
-    "@types/jest": "^24.0.23",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
