--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/lkurzyniec/tsexpress",
   "dependencies": {
-    "@types/jest": "^24.0.23",
     "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
@@ -28,6 +27,7 @@
     "dotenv": "^8.2.0",
     "envalid": "^6.0.0",
     "express": "^4.17.1",
+    "express-promise-router": "^3.0.3",
     "express-validator": "^6.2.0",
     "helmet": "^3.21.2",
     "inversify": "^5.0.1",
@@ -43,6 +43,8 @@
     "typescript": "^3.7.2"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.23",
+    "@types/statuses": "^1.5.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
@@ -53,7 +55,6 @@
     "ts-jest": "^24.1.0",
     "ts-node-dev": "^1.0.0-pre.44"
   },
-
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
