--- a/package.json
+++ b/package.json
@@ -43,14 +43,16 @@
     "typescript": "^3.7.2"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/statuses": "^1.5.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/helmet": "0.0.45",
+    "@types/jest": "^24.0.23",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
+    "@types/statuses": "^1.5.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "ts-node-dev": "^1.0.0-pre.44"
