--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple API in nodeJS with TypeScript and express",
   "main": "server.js",
   "scripts": {
+    "build": "tsc",
     "dev": "ts-node-dev --no-notify --clear --debounce 1000 ./src/server.ts",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -32,7 +33,7 @@
     "inversify": "^5.0.1",
     "json-ignore": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.11",
+    "mongoose": "^5.12.3",
     "mongoose-autopopulate": "^0.9.1",
     "reflect-metadata": "^0.1.13",
     "statuses": "^1.5.0",
@@ -51,9 +52,9 @@
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
     "@types/statuses": "^1.5.0",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
+    "ts-node-dev": "^1.1.6"
   },
   "jest": {
     "preset": "ts-jest",
