--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "sourceMap": true,
         "target": "es2017",
         "baseUrl": "./src",
+        "outDir": "./dist",
         "module": "commonjs",
         "moduleResolution": "node",
 
